2010-01-15  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-edit-buffer): New defvar.
	(twittering-update-status-from-pop-up-buffer): Use it.

2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-mode-identity): add. Identify
	'twittering-mode.el' by $Id$ tag.

2010-01-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-remove-duplicates): check
	availability of `delete-dups' by `fboundp' instead of
	`emacs-major-version'.

2010-01-14  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-format-status): add docstring

2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-update-status-function): add
	(twittering-update-status-from-pop-up-buffer): renamed from
	twittering-edit-status
	(twittering-update-status-interactive, twittering-enter)
	(twittering-organic-retweet, twittering-direct-message): use
	twittering-update-status-function
	(twittering-mode-map): bind 'u' to
	twittering-update-status-interactive

2010-01-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-string): fix the search of
	the key string following the prefix from a string including
	newlines.

	* twittering-mode.el (twittering-format-status): remove a
	newline as a separator of tweets.
	(twittering-render-timeline): insert a newline as a separator of
	tweets.

	* twittering-mode.el (twittering-format-status): add new format
	specifier "%T", which is converted to the raw text.

	* twittering-mode.el (twittering-format-status): add new format
	specifier "%FILL{...}", which applies `fill-region-as-paragraph'
	to the strings in braces.

	* twittering-mode.el (twittering-status-format): use '%FILL{...}'
	and '%T' for the default value instead of '%t'.

2010-01-12  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/run-test.sh (exit_status): add 'emacs' command to test
	target emacsen

2010-01-12  Tadashi MATSUO  <tad@mymail.twin.jp>
